--- a/app/presenters/templates/Mail/newRegistration.latte
+++ b/app/presenters/templates/Mail/newRegistration.latte
@@ -2,10 +2,10 @@
 
 Na webu se nově registroval nový uživatel.
 
-**{$user->surname} {$user->name}**
+**{$member->surname} {$member->name}**
 
 Tento uživatelsý účet není aktivní a čeká na potvrzení.
 
-Jeho profil najdete na adrese {link //:Member:User:view $user->id}
+Jeho profil najdete na adrese {link //:Member:User:view $member->id}
 
 Prosím navštivte co nejdříve jeho profil, aby se mohl případně přihlásit
