--- a/app/MemberModule/components/BillingControl.latte
+++ b/app/MemberModule/components/BillingControl.latte
@@ -25,7 +25,7 @@
 				<td class="right">{$item->count}×</td>
 				<td class="right">{($item->price * $item->count)|number:0, ',', ' '}&nbsp;Kč</td>
 			</tr>
-			<tr><th colspan="3">Bilance</th><td class="right last">{$billing->final}&nbsp;Kč</td></tr>
+			<tr><th colspan="3">Bilance</th><td class="right last">{$billing->final|number:0, ',', ' '}&nbsp;Kč</td></tr>
 			<tr n:if="$billing->note"><td colspan="4">{$billing->note|texy}</td></tr>
 		</table>
 
