--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -194,6 +194,10 @@
 		{control userEvents $member->id}
 
 		{control userAttendance $member->id}
+
+		{if ($user->id == $member->id) or ($user->isInRole('editor'))}
+			{control userInvoice $member->id}
+		{/if}
 	{/if}
 </div>
 
