AjaxControl - fix problem with load more button

--- a/app/MemberModule/components/AttendanceControl.latte
+++ b/app/MemberModule/components/AttendanceControl.latte
@@ -12,7 +12,7 @@
 
 	<table id="attendance">
 		<caption n:snippet="loadMore">
-			<a class="buttonLike ajax" n:if="$offset" n:href="loadMore! $offset">{include svg repeat} načíst další</a>
+			<a class="buttonLike ajax" n:if="$loadMore" n:href="loadMore! $offset">{include svg repeat} načíst další</a>
 		</caption>
 		<thead n:if="$offset">
 			<tr><th></th><th></th><th class="left">Datum a čas tréninku</th><th>Datum příchodu na trénink</th><th></th></tr>
