--- a/app/MemberModule/components/BillingControl.latte
+++ b/app/MemberModule/components/BillingControl.latte
@@ -11,21 +11,21 @@
 {if !$edit}
 	{if $billing}
 		<table class="view">
-			<tr><th colspan="3">Příjmy</th><th class="right">{$billing->income|number:0, ',', ' '}&nbsp;Kč</th></tr>
+			<tr><th colspan="3">Příjmy</th><th class="right">{$billing->income|money}</th></tr>
 			<tr n:foreach="$billing->related('akce_billing_item')->where('negative', FALSE) as $item">
 				<td n:class="$item->booked ? booked">{$item->name} {if $item->invoice}(faktura {$item->invoice}){/if}</td>
-				<td class="right">{$item->price|number:0, ',', ' '}&nbsp;Kč</td>
+				<td class="right">{$item->price|money}</td>
 				<td class="right">{$item->count}×</td>
-				<td class="right">{($item->price * $item->count)|number:0, ',', ' '}&nbsp;Kč</td>
+				<td class="right">{($item->price * $item->count)|money}</td>
 			</tr>
-			<tr><th colspan="3">Výdaje</th><th class="right">{$billing->expense|number:0, ',', ' '}&nbsp;Kč</th></tr>
+			<tr><th colspan="3">Výdaje</th><th class="right">{$billing->expense|money}</th></tr>
 			<tr n:foreach="$billing->related('akce_billing_item')->where('negative', TRUE) as $item">
 				<td n:class="$item->booked ? booked">{$item->name} {if $item->invoice}(faktura {$item->invoice}){/if}</td>
-				<td class="right">{$item->price|number:0, ',', ' '}&nbsp;Kč</td>
+				<td class="right">{$item->price|money}</td>
 				<td class="right">{$item->count}×</td>
-				<td class="right">{($item->price * $item->count)|number:0, ',', ' '}&nbsp;Kč</td>
+				<td class="right">{($item->price * $item->count)|money}</td>
 			</tr>
-			<tr><th colspan="3">Bilance</th><td class="right last">{$billing->final|number:0, ',', ' '}&nbsp;Kč</td></tr>
+			<tr><th colspan="3">Bilance</th><td class="right last">{$billing->final|money}</td></tr>
 			<tr n:if="$billing->note"><td colspan="4">{$billing->note|texy}</td></tr>
 		</table>
 
