--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -82,7 +82,7 @@
 
 	<p n:if="$akce->file">{include svg file-text-o} <a target="_blank" href="{$baseUrl}/doc/akce/{$akce->file}">{$akce->file}</a></p>
 
-	<p n:if="$akce->price">{include svg dollar}{$akce->price} Kč</p>
+	<p n:if="$akce->price">{include svg dollar}{$akce->price|money}</p>
 
 <p n:if="((!$akceIsOld)or($revision)) and ($akce->date_add != $akce->date_update)"
 		class="update" title="{$akce->date_update|timeAgoInWords}"><a n:tag-if="$revision" n:href="compare $revision->id">Upraveno <time datetime="{$akce->date_update|datetimeC}">{$akce->date_update|datetime}</time></a></p>
