Gallery service - update album preview to fit new gallery

--- a/app/MemberModule/components/AlbumPreviewControl.latte
+++ b/app/MemberModule/components/AlbumPreviewControl.latte
@@ -1,7 +1,7 @@
 <div id="album" n:if=$album>
-<a href="{plink :Photo:Album:view $album->slug}" target="_blank" title="{$album->text|truncate:70}">{$album->name}
+<a href="https://photo.vzs-jablonec.cz/album/{$album->slug}" target="_blank" title="{$album->summary|truncate:70}">{$album->title}
     <ul n:if="isset($photos)" n:inner-foreach="$photos as $photo" class="photoList">
-        <li><img src="{$baseUrl}/{$photo|thumb}" width="150" height="100" alt="{$photo->filename}"></li>
+        <li><img src="https://photo.vzs-jablonec.cz/albums/{$album->id}/small/{$photo->thumbname}" width="150" height="100" alt="{$photo->filename}"></li>
     </ul>
 </a>
 
@@ -9,9 +9,9 @@
     <span class="no-wrap"><b>Počet fotografií:</b> {$pocet}</span>
     <span class="no-wrap" title="{$album->date|date:'%d. %B %Y'}"><b>Datum:</b> <time datetime="{$album->date|date:'Y-m-d'}">{$album->date|timeAgoInWords}</time></span>
     <span class="no-wrap"
-          title="{$album->date_add|date:'%d. %B %Y %H:%M'}"><b>Přidáno:</b> <time datetime="{$album->date_add|datetimeC}">{$album->date_add|timeAgoInWords}</time></span>
+          title="{$album->created_at|date:'%d. %B %Y %H:%M'}"><b>Přidáno:</b> <time datetime="{$album->created_at|datetimeC}">{$album->created_at|timeAgoInWords}</time></span>
     <span class="no-wrap"
-          title="{$album->date_update|date:'%d. %B %Y %H:%M'}" n:if="$album->date_update != $album->date_add"><b>Upraveno:</b> <time datetime="{$album->date_update|datetimeC}">{$album->date_update|timeAgoInWords}</time></span>
-    <span class="no-wrap"><b>{if $album->visible}Viditelné veřejnosti{else}Neviditelné pro veřejnost{/if}</b></span>
+          title="{$album->modified_at|date:'%d. %B %Y %H:%M'}" n:if="$album->modified_at != $album->created_at"><b>Upraveno:</b> <time datetime="{$album->modified_at|datetimeC}">{$album->modified_at|timeAgoInWords}</time></span>
+    <span class="no-wrap"><b>{if $album->public}Viditelné veřejnosti{else}Neviditelné pro veřejnost{/if}</b></span>
 </div>
 </div>
