--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -55,13 +55,7 @@
 		{include #title}
 	</div>
 
-	<ul n:ifset="$mainMenu" id="menu" n:inner-foreach="$mainMenu as $item">
-		<li n:if="$user->isInRole($item->role)" n:class="$presenter->isLinkCurrent($item->current) ? current">
-			<a n:href="$item->link" title="{$item->title}" {if $iterator->last}target="_blank"{/if}>
-				{include svg $item->icon} <span>{$item->title}</span>
-			</a>
-		</li>
-	</ul>
+	{control menu $baseUrl}
 
 	<div id="text">
 		<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
