Account module - add manually gallery url

--- a/app/AccountModule/templates/@layout.latte
+++ b/app/AccountModule/templates/@layout.latte
@@ -40,7 +40,7 @@
 		<nav class="row">
 			<ul id="menu" class="box">
 				<li><a n:href=":Member:News:">MEMBER</a></li>
-				<li><a n:href=":Photo:Album:">PHOTO</a></li>
+				<li><a href="http://photo.vzs-jablonec.cz">PHOTO</a></li>
 				<li><a n:href=":Account:Sign:">ACCOUNT</a></li>
 			</ul>
 		</nav>
