Menu - show only at BasePresneter children

--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -55,7 +55,9 @@
 		{include #title}
 	</div>
 
-	{control menu $baseUrl}
+	{if $presenter instanceof \App\MemberModule\Presenters\BasePresenter}
+		{control menu $baseUrl}
+	{/if}
 
 	<div id="text">
 		<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
