--- a/app/MemberModule/components/BillingControl.latte
+++ b/app/MemberModule/components/BillingControl.latte
@@ -44,22 +44,22 @@
 
 	{define item-row}
 		<tr n:if="$iterator->isFirst()">
-			<th>{label {$category}-$id-name /}</th>
-			<th>{label {$category}-$id-price /}</th>
-			<th>{label {$category}-$id-count /}</th>
-			<th>{label {$category}-$id-final /}</th>
-			<th><label n:name="{$category}-$id-booked" class="hint" title="Účtováno přes náš spolek nebo placeno z peněz spolku">Přes PS</label></th>
-			<th>{label {$category}-$id-invoice /}</th>
+			<th>{label {$category}-{$id}-name /}</th>
+			<th>{label {$category}-{$id}-price /}</th>
+			<th>{label {$category}-{$id}-count /}</th>
+			<th>{label {$category}-{$id}-final /}</th>
+			<th><label n:name="{$category}-{$id}-booked" class="hint" title="Účtováno přes náš spolek nebo placeno z peněz spolku">Přes PS</label></th>
+			<th>{label {$category}-{$id}-invoice /}</th>
 			<th></th>
 		</tr>
 		<tr class="row">
-			<td>{input {$category}-$id-name}</td>
-			<td>{input {$category}-$id-price}</td>
-			<td>{input {$category}-$id-count}</td>
-			<td>{input {$category}-$id-final}</td>
-			<td>{input {$category}-$id-booked}</td>
-			<td>{input {$category}-$id-invoice}</td>
-			<td>{input {$category}-$id-remove}</td>
+			<td>{input {$category}-{$id}-name}</td>
+			<td>{input {$category}-{$id}-price}</td>
+			<td>{input {$category}-{$id}-count}</td>
+			<td>{input {$category}-{$id}-final}</td>
+			<td>{input {$category}-{$id}-booked}</td>
+			<td>{input {$category}-{$id}-invoice}</td>
+			<td>{input {$category}-{$id}-remove}</td>
 		</tr>
 	{/define}
 
