--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -11,7 +11,7 @@
 {import '@copy.latte'}
 
 {define mapy $place}
-	<sup><a href="https://mapy.cz/zakladni?q={$place|escapeurl}" target="_blank" title="Hledat na Mapy.cz">{include svg search}Mapy.cz</a></sup>
+	<sup><a href="https://mapy.cz/zakladni?q={$place|escapeUrl}" target="_blank" title="Hledat na Mapy.cz">{include svg search}Mapy.cz</a></sup>
 {/define}
 
 <!DOCTYPE html>
