--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -87,7 +87,7 @@
 				<th>Příjmení</th><td>{$member->surname}</td>
 			</tr>
 			<tr>
-				<th>Osobní číslo</th><td>{$member->id|padLeft:3:0} {if $member->vzsId}({$member->vzsId}){/if}</td>
+				<th>Osobní číslo</th><td>{$member->id|padLeft:3,0} {if $member->vzsId}({$member->vzsId}){/if}</td>
 			</tr>
 			<tr>
 				<th>Registrace</th><td>{if $member->date_add}{$member->date_add|date:'d.m.Y'}{/if}</td>
@@ -181,7 +181,7 @@
 	{/if}
 
 	<div id="poznamka">
-		{$member->text|noescape|texy}
+		{$member->text|texy|noescape}
 	</div>
 
 	{if ($user->isInRole('member'))}
