--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -131,14 +131,13 @@
 	{/if}
 
 {if $akce->album_id}
-<hr>
-<h3>Fotografie {include svg image}</h3>
+<h3>{include svg image} Fotografie</h3>
 {control album $akce->album_id}
 {/if}
 
 {if $akce->anketa_id}
 <hr>
-<h3>Anketa {include svg list-ul}</h3>
+<h3>{include svg list-ul} Anketa </h3>
 
 <p><a n:href="Ankety:view $akce->anketa_id" n:tag-if="$user->isInRole('member')">{$anketa->title|firstUpper}</a><p>
 
@@ -147,7 +146,7 @@
 
 {if $akce->forum_topic_id}
 <hr>
-<h3>Poslední příspěvky {include svg comments-o}</h3>
+<h3>{include svg comments-o} Poslední příspěvky</h3>
 
 <a n:if="(!$topic->locked)and($user->isInRole('member'))" class="buttonLike float-right" n:href="Forum:add $topic->id">{include svg plus} nový příspěvěk</a>
 
