Event page icons update and get rid off horizontal lines

--- a/app/MemberModule/components/BillingControl.latte
+++ b/app/MemberModule/components/BillingControl.latte
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{$baseUrl}/css/member.billing.css">
 <script type="application/javascript" src="{$baseUrl}/js/member.billing.js"></script>
 
-<h3>Vyúčtování {include svg dollar}</h3>
+<h3>{include svg dollar} Vyúčtování</h3>
 {snippet component}
 <div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
 
