Event series - add option to event form

--- a/app/MemberModule/templates/Akce.edit.latte
+++ b/app/MemberModule/templates/Akce.edit.latte
@@ -62,6 +62,8 @@ uvidí ji na webu pouze její organizatoři. Dokončením tohoto formuláře se 
 <p>{label created_by /}{input created_by}
 <span class="no-wrap" n:if="isset($form['organizator'])">{label organizator /}{input organizator}</span></p>
 
+<p>{label sequence_id /}{input sequence_id}</p>
+
 <p>{label forum_topic_id /}{input forum_topic_id} <span class="no-wrap">{label anketa_id /}{input anketa_id}</span>
 <p>{label album_id /}{input album_id}</p>
 
