--- a/app/MemberModule/templates/Attendance.default.latte
+++ b/app/MemberModule/templates/Attendance.default.latte
@@ -34,8 +34,8 @@
 					</strong>
 				</a>
 			</td>
-			<td class="center">{$session->from|date:' %H:%i'}</td>
-			<td class="center">{$session->to|date:' %H:%i'}</td>
+			<td class="center">{$session->from|date:' %H:%I'}</td>
+			<td class="center">{$session->to|date:' %H:%I'}</td>
 		</tr>
 		</tbody>
 	</table>
