--- a/app/MemberModule/templates/Attendance.view.latte
+++ b/app/MemberModule/templates/Attendance.view.latte
@@ -11,7 +11,7 @@
 <h1 n:block="title">Docházka</h1>
 
 {block #content}
-    <p>Docházka tréninku <strong>{$session->date|date:'%A %d.%m.%Y'} {$session->from|date:'%H:%i'}-{$session->to|date:'%H:%i'}</strong></p>
+    <p>Docházka tréninku <strong>{$session->date|date:'%A %d.%m.%Y'} {$session->from|date:'%H:%I'}-{$session->to|date:'%H:%I'}</strong></p>
 
     <table id="items">
         <thead>
