Datetime filter - post merge update

--- a/app/MemberModule/components/AttendanceControl.latte
+++ b/app/MemberModule/components/AttendanceControl.latte
@@ -36,7 +36,7 @@
 						</a>
 					</td>
 					<td class="right">
-						{$attendance->datetime|date:'d.m.Y H:I'}
+						{$attendance->datetime|date:'d.m.Y H:i'}
 					</td>
 				</tr>
 			{/foreach}
