User grid - format card id as code

--- a/app/MemberModule/components/UserGridControlColumns.latte
+++ b/app/MemberModule/components/UserGridControlColumns.latte
@@ -52,6 +52,10 @@
 	{include col-yes-no}
 {/define}
 
+{define col-cardId}
+	<td style="font-size: larger"><code>{$cell}</code></td>
+{/define}
+
 {define col-role}
 	<td class="right">
 		{$cell}
