--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -17,6 +17,21 @@
 		#first { display: block; text-align: right; padding-bottom: 0.6ex; padding-right: 1.5em; border-radius: 1.5em 1.5em 0 0;}
 		#photo { background-color: silver; color: gray; padding: 65px 0;}
 		.card #logo { display: none; }
+		#badges { width: 100%; max-width: 50em;}
+		#badges strong { font-size: large; }
+		#badges table { width: 100%}
+		#badges .badge img { height: 50px; }
+		#badges .badge:hover .lookup { display: block; width: 200px; height: 200px; border: 1px solid gray; position: absolute; top: 20%; left: 20%; background-color: gray; background-size: 200px;
+			z-index: 2;}
+
+		#badges .gold { filter: sepia(1)}
+		#badges #badge-table.inline .badge:hover .lookup { display: none; }
+		#badge-table th { position: relative; }
+		#badge-table .progress { height: 1ex; background-color: gray; border-radius: 1em;}
+
+		#badge-table.inline thead, #badge-table.inline .details { display: none }
+		#badge-table.inline tr, #badge-table.inline td { display: inline; }
+		#badges #badge-table.inline .badge img { height: 75px; }
 
 		@media screen and (min-width: 600px) {
 			.card .buttonMenu { margin-top: 0; padding-bottom: 2ex;}
@@ -184,6 +199,46 @@
 		{$member->text|texy|noescape}
 	</div>
 
+	{if $badges->count()}
+		<h3>{include svg tags} Odznáčky</h3>
+		<div id="badges">
+			<div id="badge-table" class="inline">
+				<table>
+					<thead>
+					<tr>
+						<th></th><th>Název a popis</th><th>Procento</th><th>Počet</th><th>Získáno</th>
+					</tr>
+					</thead>
+					<tbody>
+					{foreach $badges as $badge}
+					{var $percent = $achievements[$badge->achievement_id] / $users * 100}
+					<tr n:class="($percent < 10) ? gold">
+						<th rowspan="2">
+							<a href="{$baseUrl}/img/badges/{$badge->achievement->code}.png" class="badge" title="{$badge->achievement->name} - {$badge->achievement->description} - {$badge->date|date:'d.m.Y'}">
+								<img src="{$baseUrl}/img/badges/{$badge->achievement->code}.png">
+								<span class="lookup" style="background-image: url('{$baseUrl}/img/badges/{$badge->achievement->code}.png')"></span>
+							</a>
+						</th>
+						<td class="details details-text">
+							<strong>{$badge->achievement->name}</strong><br> {$badge->achievement->description}
+						</td>
+						<td class="details center">{$percent|round:2}%</td>
+						<td class="details center">{$achievements[$badge->achievement_id]}</td>
+						<td class="details center"><a n:tag-if="$badge->event_id" n:href="Akce:view, $badge->event_id">{$badge->date|date:'d.m.Y'}</a></td>
+					</tr>
+					<tr n:class="($percent < 10) ? gold">
+						<td class="details" colspan="4"><div class="progress" style="width: {$percent|number:2|noescape}%;"></div></td>
+					</tr>
+					{/foreach}
+					</tbody>
+				</table>
+
+				<p class="center" id="badge-list-button"><button class="buttonLike">{include svg chevron-down} Zobrazit podrobnosti</button></p>
+				<p class="center hide" id="badge-table-button"><button class="buttonLike">{include svg chevron-up} Skrýt podrobnosti</button></p>
+			</div>
+		</div>
+	{/if}
+
 	{if ($user->isInRole('member'))}
 		{*
 		<p>
@@ -203,5 +258,15 @@
 
 	<script type="text/javascript" n:syntax="off" n:nonce>
 		$.nette.init();
+		document.getElementById('badge-list-button').addEventListener('click', function (){
+			document.getElementById('badge-list-button').classList.add('hide');
+			document.getElementById('badge-table').classList.remove('inline');
+			document.getElementById('badge-table-button').classList.remove('hide');
+		});
+		document.getElementById('badge-table-button').addEventListener('click', function (){
+			document.getElementById('badge-table').classList.add('inline');
+			document.getElementById('badge-list-button').classList.remove('hide');
+			document.getElementById('badge-table-button').classList.add('hide');
+		});
 	</script>
 {/block}
